--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="list advantages-list">
             <li class="advantages-list-item">
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#antenna-icon"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Strategy</h3>
               <p class="advantages-desc">
                 Our goal is to identify the business problem to walk away with
@@ -83,6 +88,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#clock-icon"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Punctuality</h3>
               <p class="advantages-desc">
                 Bring the key message to the brand's audience for the best price
@@ -90,6 +100,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#diagram-icon"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Diligence</h3>
               <p class="advantages-desc">
                 Research and confirm brands that present the strongest digital
@@ -97,6 +112,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#astronaut-icon"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Technologies</h3>
               <p class="advantages-desc">
                 Design practice focused on digital experiences. We bring forth a
@@ -157,6 +177,36 @@
               <div class="team-card">
                 <h3 class="team-list-title">Mark Guerrero</h3>
                 <p class="team-list-desc">Product Designer</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item card-set-item">
@@ -170,6 +220,36 @@
               <div class="team-card">
                 <h3 class="team-list-title">Tom Ford</h3>
                 <p class="team-list-desc">Frontend Developer</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item card-set-item">
@@ -183,6 +263,36 @@
               <div class="team-card">
                 <h3 class="team-list-title">Camila Garcia</h3>
                 <p class="team-list-desc">Marketing</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item card-set-item">
@@ -196,7 +306,87 @@
               <div class="team-card">
                 <h3 class="team-list-title">Daniel Wilson</h3>
                 <p class="team-list-desc">UI Designer</p>
+                <ul class="team-socials-list list">
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-socials-list-item">
+                    <a class="team-socials-list-link link" href="">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use href="./images/icons/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- customers section -->
+      <section class="section customers-section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="list customers-list">
+            <li class="customers-list-item">
+              <a class="link customers-list-link" href="">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/icons/icons.svg#first-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a class="link customers-list-link" href="">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/icons/icons.svg#second-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a class="link customers-list-link" href="">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/icons/icons.svg#third-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a class="link customers-list-link" href="">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/icons/icons.svg#fourth-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a class="link customers-list-link" href="">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/icons/icons.svg#fifth-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a class="link customers-list-link" href="">
+                <svg class="customers-list-icon" width="104" height="56">
+                  <use href="./images/icons/icons.svg#six-company"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -212,6 +402,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="social-media-wrapper">
+          <p class="social-media-desc">Social media</p>
+          <ul class="list">
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-socials-list-item">
+              <a class="team-socials-list-link link" href="">
+                <svg class="team-social-list-icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
