--- a/portfolio.html
+++ b/portfolio.html
@@ -93,13 +93,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                      <p class="overlay-text">
+                  <p class="overlay">
                         14 Stylish and User-Friendly App Design Concepts · Task
                         Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                         App · Cloud Storage App
                       </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">
@@ -118,13 +116,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Cashless Payment</h2>
@@ -141,13 +137,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Meditation App</h2>
@@ -164,13 +158,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Taxi Service</h2>
@@ -187,13 +179,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Screen Illustrations</h2>
@@ -210,13 +200,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Online Courses</h2>
@@ -233,13 +221,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Instagram Stories Concept</h2>
@@ -256,13 +242,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
+                  <p class="overlay">
                       14 Stylish and User-Friendly App Design Concepts · Task
                       Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                       · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Organic Food</h2>
@@ -279,13 +263,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
+                  <p class="overlay">                   
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                    · Cloud Storage App
                     </p>
-                  </div>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Fresh Coffee</h2>
