--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
           >
           <ul class="nav-list list">
             <li class="nav-list-item">
-              <a class="nav-list-link link" href="./index.html">Studio</a>
+              <a class="nav-list-link link" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link current link" href="./portfolio.html"
@@ -295,28 +297,28 @@
           <p class="social-media-desc">Social media</p>
           <ul class="list team-socials-list-footer">
             <li class="team-socials-list-item">
-              <a class="team-socials-list-link link" href="">
+              <a class="team-socials-list-link team-socials-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="team-socials-list-item">
-              <a class="team-socials-list-link link" href="">
+              <a class="team-socials-list-link team-socials-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="team-socials-list-item">
-              <a class="team-socials-list-link link" href="">
+              <a class="team-socials-list-link team-socials-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="team-socials-list-item">
-              <a class="team-socials-list-link link" href="">
+              <a class="team-socials-list-link team-socials-link link" href="">
                 <svg class="team-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
