--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,7 @@
           >
           <ul class="nav-list list">
             <li class="nav-list-item">
-              <a class="nav-list-link link" href="./index.html"
-                >Studio</a
-              >
+              <a class="nav-list-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link current link" href="./portfolio.html"
@@ -96,10 +94,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                        14 Stylish and User-Friendly App Design Concepts · Task
-                        Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                        App · Cloud Storage App
-                      </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">
@@ -119,10 +117,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Cashless Payment</h2>
@@ -140,17 +138,19 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Meditation App</h2>
                   <p class="products-list-desc">App</p>
                 </div>
               </a>
-            <a href="" class="products-list-link"></li></a>
+              <a href="" class="products-list-link"></a>
+            </li>
+
             <li class="products-list-item">
               <a href="" class="products-list-link link">
                 <div class="products-list-box">
@@ -161,10 +161,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Taxi Service</h2>
@@ -182,10 +182,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Screen Illustrations</h2>
@@ -203,10 +203,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Online Courses</h2>
@@ -224,10 +224,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Instagram Stories Concept</h2>
@@ -245,10 +245,10 @@
                     height="300"
                   />
                   <p class="overlay">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                      · Cloud Storage App
-                    </p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Organic Food</h2>
@@ -265,11 +265,11 @@
                     width="360"
                     height="300"
                   />
-                  <p class="overlay">                   
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                    · Cloud Storage App
-                    </p>
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="product-wrapper">
                   <h2 class="products-list-title">Fresh Coffee</h2>
